--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "yocto-queue": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
